[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemys/EnemyBase.gd" type="Script" id=1]
[ext_resource path="res://Enemys/SoftColision.gd" type="Script" id=2]
[ext_resource path="res://Enemys/PlayerDetection.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 126.321

[node name="EnemyBase" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="PlayerDetection" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="PlayerDetection" type="Area2D" parent="PlayerDetection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection/PlayerDetection"]

[node name="ChaseDistance" type="Area2D" parent="PlayerDetection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection/ChaseDistance"]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]

[node name="SoftColision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftColision"]

[node name="GroupInArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroupInArea"]
shape = SubResource( 1 )

[connection signal="body_entered" from="PlayerDetection/PlayerDetection" to="PlayerDetection" method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection/ChaseDistance" to="PlayerDetection" method="_on_ChaseDistance_body_exited"]
[connection signal="body_entered" from="GroupInArea" to="." method="_on_GroupInArea_body_entered"]
